--- a/index.css
+++ b/index.css
@@ -1,3 +1,204 @@
+html, body, header {
+    margin: 0%;
+    background-color: rgb(226, 226, 226);
+    font-family: sans-serif;
+}
+
+.headerDiv {
+    background-color: rgb(218, 218, 218);
+    width: 100%;
+    height: 100px;
+}
+
+.img--logo {
+    position: absolute;
+    top: 1px;
+    left: 30px;
+    height: 99px;
+}
+
+ul {
+    display: flex;
+    justify-content: center;
+    padding: 0%;
+    margin: 0%;
+    list-style: none;
+    gap: 40px;
+    padding-top: 40px;
+    
+}
+
+.a {
+    text-decoration: none;
+    margin: 0px 20px;
+    color: rgb(0, 0, 0);
+    text-align: center;
+    font-size: 18px;
+    border: 1px solid rgb(218, 218, 218);
+}
+
+.a:hover {
+    border-bottom-width: 1px;
+    border-bottom-style: solid;
+    border-bottom-color: #0008;
+    
+    border-right-width: 1px;
+    border-right-style: solid;
+    border-right-color: #0008;
+    color: rgb(34, 34, 34);
+}
+
 h1 {
-    color: rgba(255, 0, 0, 0.37);
+    font-size: 35px;
+    padding-left: 40px;
+    padding-top: 10px;
+}
+
+.img--tip {
+    position: absolute;
+    border-radius: 5px;
+    height: 200px;
+    left: 880px;
+    top: 235px;
+}
+
+.tempDiv {
+    background-color: rgb(6, 170, 224);;
+    width: 400px;
+    height: 185px;
+    border-radius: 15px;
+    margin-left: 40px;
+}
+
+.temperatura {
+    font-family: sans-serif;
+    font-size: 70px;
+    padding-top: 50px;
+    padding-left: 80px;
+}
+
+.img--termometro {
+    position: absolute;
+    right: 1240px;
+    top: 278px;
+}
+
+.p--temperatura {
+    position: absolute;
+    font-size: 80px;
+    left: 100px;
+    top: 170px;
+}
+
+
+.h2--subtituloArg {
+    font-size: 31px;
+    padding-left: 40px;
+    padding-top: 150px;
+    margin: 0%;
+}
+
+.p--texto {
+    font-size: 20px;
+    padding-left: 40px;
+}
+
+.img--notiArg {
+    position: absolute;
+    padding-left: 40px;
+}
+
+.img--anuncio {
+    position: absolute;
+    height: 500px;
+    left: 990px;
+    top: 1290px;
+}
+
+.p--textoDebajo {
+    font-size: 20px;
+    padding-left: 40px;
+    padding-top: 500px;
+}
+
+
+.h3--subtituloMundo {
+    font-size: 31px;
+    padding-left: 40px;
+    padding-top: 65px;
+}
+
+h5 {
+    font-size: 20px;
+    padding-left: 40px;
+}
+
+.img--imaguenEEUU {
+    padding-left: 40px;
+    border-radius: 10px;
+}
+
+.p--textoMundo {
+    padding-left: 40px;
+    font-size: 20px;
+}
+
+.h3--subtiApi {
+    padding-left: 40px;
+    padding-top: 40px;
+    font-size: 25px;
+}
+
+.h3--contac {
+    padding-left: 40px;
+    padding-top: 50px;
+    font-size: 20px;
+}
+
+
+.h2--subtituloForm {
+    padding-top: 50px;
+    padding-left: 40px
+}
+
+.label--name {
+    padding-left: 150px;
+}
+
+.input--name {
+    margin-left: 150px;
+    width: 300px;
+    height: 27px;
+    left: 100px;
+}
+
+.label--email {
+    padding-left: 150px;
+}
+
+.input--email {
+    margin-left: 150px;
+    width: 300px;
+    height: 27px;
+    left: 100px;
+}
+
+.label--menssage {
+    padding-left: 150px;
+}
+
+.text--message {
+    margin-left: 150px;
+    width: 300px;
+    height: 27px;
+    left: 100px;
+}
+
+.button--submit {
+    position: absolute;
+    left: 255px;
+    width: 100px;
+    height: 30px;
+    background-color: rgba(5, 170, 225);
+    border-radius: 5px;
 }
